# bee-python-sdk

./: .pre-commit-config.yaml  README.md  example.env  pyproject.toml
examples/: basic_usage.py  custom_tool.py  download_file.py  download_trace.py  function_call.py  streaming.py  vector_store.py
scripts/: copyright.sh
tests/: __init__.py  test_examples.py
